# AnySchedule

./: .gitignore  README.md  demo-power.py  demo-schedule.py  demo-torch.py  pyproject.toml
config/: example-wsd.toml  example.toml
src/anyschedule/: __init__.py  base.py  composer.py  utils.py  wrapper.py
src/anyschedule/scheduler/: __init__.py  constant.py  cosine.py  polynomial.py  power.py  step.py
