[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anyschedule"
version = "0.1.0"
description = "Hyperparameter scheduler composer for PyTorch Optimizers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Shih-Ying Yeh(KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com"},
]
dependencies = [
    "numpy",
    "torch",
    "toml"
]

[project.urls]
Homepage = "https://github.com/KohakuBlueleaf/AnySchedule"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]